# Orderly

./: .gitignore  Cargo.toml  README.md  deny.toml  setup_test_environment.ps1  setup_test_environment.sh
.github/workflows/: ci.yml  security.yml
rules/: example.yaml
src/: actions.rs  actions_tests.rs  conditions.rs  conditions_tests.rs  config.rs  error.rs  main.rs
